--- a/nos-partenaires.html
+++ b/nos-partenaires.html
@@ -67,7 +67,7 @@
                         <div class="el-block-two">
                             <h2 class="el-title">catalogue alamitec</h2>
                             <div class="el-container-nav">
-                                <a href=""><i class="fas fa-file-pdf"></i>download.pdf</a>
+                                <a href="./assets/Catalogue-final-alamitec.pdf"><i class="fas fa-file-pdf"></i>download.pdf</a>
                             </div>
                         </div>
                         <div class="el-block-three">
