Début de la page contact

--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,17 @@
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <!-- JQUERY -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css" />
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     
-    <!-- PAGE -->
     <div id="el-page">
 
-        <!-- HEADER PAGE -->
+        <!-- HEADER -->
         <header id="el-header-page">
             <a href="" class="el-logo">
                 <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
@@ -36,14 +37,14 @@
                 </li>
             </ul>
         </header>
-        <!-- FIN HEADER PAGE -->
+        <!-- FIN HEADER -->
 
         <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
                     <img src="./assets/images/cmpe-2.jpg" alt="" class="el-img">
-                    <h1>installation mines</h1>
+                    <h1>contact</h1>
                     <div class="el-content">
                         <h2><i class="fas fa-circle"></i>you are here:</h2>
                         <div>
@@ -51,7 +52,7 @@
                             <i class="fas fa-chevron-right"></i>
                             <span>services</span>
                             <i class="fas fa-chevron-right"></i>
-                            <span>installation mines</span>
+                            <span>contact</span>
                         </div>
                     </div>
                 </div>
@@ -70,37 +71,38 @@
         </section>
         <!-- FIN BANNER CTA -->
 
-        <!-- INSTALLATION CLE EN MAIN -->
-        <section id="el-installation-cle-en-main" class="el-center-box">
+        <!--  -->
+        <section id="el-contact" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-container">
-                    <img src="./assets/images/web-con-1-1024x138.jpg" alt="">
-                    <div class="el-grid">
-                        <article class="el-left">
-                            <p class="el-paragraphe">
-                                ALAMITEC compte depuis 20ans sur la compétence, la créativité et le professionnalisme de ses équipes d’ingénieurs et de techniciens pour vous accompagner dans l’étude et la réalisation de tous les projets de développement miniers et industriels. Nous comptons également sur une collaboration étroite avec un large réseau d’experts externes pour certains projets.
-                            </p>
-                        </article>
-                        <article class="el-right">
-                            <p class="el-paragraphe">
-                                <strong>DANS LA POURSUITE D’OR</strong>
-
-                            </p>
-                            <p class="el-paragraphe">
-                                Au-delà du Maroc, <strong>DANS LA POURSUITE D’</strong>
-                                a entamé une expansion sur le continent Africain, en commençant par la Mauritanie Soudan et prochainement en Guinée…. Avec des installations partiels jusqu’à des solutions clé en main.
-                            </p>
-                            <p class="el-paragraphe">
-                                Avec ses partenaires et ses experts les plus expérimentés au Maroc, nous avons commencer une vision d’indépendance pour la fabrication et la conception de nos solutions avec un prix et une qualité très Compétitifs.
-                            </p>
-                        </article>
+                <div id="tabs">
+                    <ul>
+                      <li><a href="#tabs-1">siège et stock</a></li>
+                      <li><a href="#tabs-2">atelier de production</a></li>
+                    </ul>
+                    <div id="tabs-1">
+                      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos asperiores, consequatur rem voluptatem hic, quia iste, autem unde odit nostrum quo! Voluptatibus veritatis, architecto cupiditate repudiandae autem sit culpa ea?</h2>
+                      <form action="" method="post">
+                        <div class="el-row">
+                            <div class="el-col"><input type="text" name="name" placeholder="Nom" /></div>
+                            <div class="el-col"><input type="email" name="email" placeholder="E-mail" /></div>
+                            <div class="el-col"><input type="tel" name="phone" placeholder="Téléphone" /></div>
+                        </div>
+                        <div class="el-row">
+                            <div class="el-col"><input type="text" name="subject" placeholder="Sujet" /></div>
+                        </div>
+                        <div class="el-row">
+                            <div class="el-col el-textarea"><textarea name="message"></textarea></div>
+                        </div>
+                      </form>
                     </div>
-                </div>
+                    <div id="tabs-2">
+                      <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+                    </div>
+                  </div>
             </div>
         </section>
-        <!-- FIN INSTALLATION CLE EN MAIN -->
+        <!-- FIN  -->
 
-        <!-- REALISATIONS -->
         <section id="el-realisation" class="el-center-box">
             <div class="el-content-area">
                 <h2 class="el-title">nos réalisations</h2>
@@ -118,9 +120,7 @@
                 </div>
             </div>
         </section>
-        <!-- FIN REALISATIONS -->
 
-        <!-- BANNER CTA -->
         <section class="el-banner-cta" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-grid">
@@ -129,9 +129,7 @@
                 </div>
             </div>
         </section>
-        <!-- FIN BANNER CTA -->
 
-        <!-- FOOTER -->
         <footer id="el-footer-page" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-top">
@@ -172,12 +170,11 @@
                 </p>
             </div>
         </footer>
-        <!-- FIN FOOTER -->
     </div>
-    <!-- FIN PAGE -->
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
     <!-- FONTAWESOME -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
     <!-- OWL CAROUSEL -->
