--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </section>
 
-        <section id="el-banner-cta" class="el-center-box">
+        <section id="el-banner-cta" class="el-center-box el-banner-cta">
             <div class="el-content-area">
                 <div class="el-grid">
                     <h2>de l'idée, du plan à la solution finale</h2>
