--- a/installation-cle-en-main.html
+++ b/installation-cle-en-main.html
@@ -17,6 +17,7 @@
     
     <div id="el-page">
 
+        <!-- HEADER -->
         <header id="el-header-page">
             <a href="" class="el-logo">
                 <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
@@ -34,7 +35,9 @@
                 </li>
             </ul>
         </header>
+        <!-- FIN HEADER -->
 
+        <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
@@ -53,7 +56,9 @@
                 </div>
             </div>
         </section>
+        <!-- FIN TITLE OVERLAY -->
 
+        <!-- BANNER CTA -->
         <section class="el-banner-cta" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-grid">
@@ -62,7 +67,9 @@
                 </div>
             </div>
         </section>
+        <!-- FIN BANNER CTA -->
 
+        <!--  -->
         <section id="el-installation-cle-en-main" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-container">
@@ -83,6 +90,7 @@
                 </div>
             </div>
         </section>
+        <!-- FIN  -->
 
         <section id="el-realisation" class="el-center-box">
             <div class="el-content-area">
