--- a/prestation.html
+++ b/prestation.html
@@ -15,10 +15,9 @@
 </head>
 <body>
     
-    <!-- PAGE -->
     <div id="el-page">
 
-        <!-- HEADER PAGE -->
+        <!-- HEADER -->
         <header id="el-header-page">
             <a href="" class="el-logo">
                 <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
@@ -36,14 +35,14 @@
                 </li>
             </ul>
         </header>
-        <!-- FIN HEADER PAGE -->
+        <!-- FIN HEADER -->
 
         <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
                     <img src="./assets/images/cmpe-2.jpg" alt="" class="el-img">
-                    <h1>installation mines</h1>
+                    <h1>installation clé en main</h1>
                     <div class="el-content">
                         <h2><i class="fas fa-circle"></i>you are here:</h2>
                         <div>
@@ -51,7 +50,7 @@
                             <i class="fas fa-chevron-right"></i>
                             <span>services</span>
                             <i class="fas fa-chevron-right"></i>
-                            <span>installation mines</span>
+                            <span>installation clé en main</span>
                         </div>
                     </div>
                 </div>
@@ -70,37 +69,29 @@
         </section>
         <!-- FIN BANNER CTA -->
 
-        <!-- INSTALLATION CLE EN MAIN -->
-        <section id="el-installation-cle-en-main" class="el-center-box">
+        <!--  -->
+        <section id="el-prestation" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-container">
-                    <img src="./assets/images/web-con-1-1024x138.jpg" alt="">
-                    <div class="el-grid">
-                        <article class="el-left">
-                            <p class="el-paragraphe">
-                                ALAMITEC compte depuis 20ans sur la compétence, la créativité et le professionnalisme de ses équipes d’ingénieurs et de techniciens pour vous accompagner dans l’étude et la réalisation de tous les projets de développement miniers et industriels. Nous comptons également sur une collaboration étroite avec un large réseau d’experts externes pour certains projets.
-                            </p>
-                        </article>
-                        <article class="el-right">
-                            <p class="el-paragraphe">
-                                <strong>DANS LA POURSUITE D’OR</strong>
-
-                            </p>
-                            <p class="el-paragraphe">
-                                Au-delà du Maroc, <strong>DANS LA POURSUITE D’</strong>
-                                a entamé une expansion sur le continent Africain, en commençant par la Mauritanie Soudan et prochainement en Guinée…. Avec des installations partiels jusqu’à des solutions clé en main.
-                            </p>
-                            <p class="el-paragraphe">
-                                Avec ses partenaires et ses experts les plus expérimentés au Maroc, nous avons commencer une vision d’indépendance pour la fabrication et la conception de nos solutions avec un prix et une qualité très Compétitifs.
-                            </p>
-                        </article>
+                <div class="el-grid">
+                    <div class="el-container">
+                        <div class="el-content">
+                            <h2>Le spécialiste de la conception des tableaux électrique au service de la distribution électrique & des automatismes industriels.</h2>
+                            <p><strong>alamitec</strong>  est une société intervenant dans l’étude, la conception, le câblage d’armoires électriques industrielles, la fabrication de tableau général basse tension (TGBT), de coffrets électriques et de tableaux divisionnaires, ainsi que l’automatisme et la supervision des procédés industriels. Elle intervient dans de nombreux domaines tels que mines et carrières, le traitement de l’eau, l’industrie, le tertiaire, le domestique ainsi que l’agro-alimentaire.</p>
+                        </div>
+                        <img src="./assets/images/prestation/01/1.jpg" alt="">
+                    </div>
+                    <div class="el-container">
+                        <div class="el-content">
+                            <p><span>Notre bureau d’études conçoit et développe les études électriques grâce aux outils de C.A.O les plus reconnus sur le marché (<strong>CANECO</strong>, <strong>Dialux</strong>, <strong>AUTOCAD</strong>..) Nous réalisons tous vôs projets en automatisme (<strong>SIEMENS</strong>, <strong>SCHNEIDER</strong>…) et supervision que ce soit un projet neuf ou un revamping.</span></p>
+                            <p><span style="color: #000000;"><strong>ALAMITEC</strong> possède un pôle automatisme permettant de concevoir tous les projets en automatisme et supervision (Analyse fonctionnelle, programmation automate, supervision, pupitre opérateurs, plateforme d’essais)</span></p>
+                        </div>
+                        <img src="./assets/images/prestation/01/2.jpg" alt="">
                     </div>
                 </div>
             </div>
         </section>
-        <!-- FIN INSTALLATION CLE EN MAIN -->
+        <!-- FIN  -->
 
-        <!-- REALISATIONS -->
         <section id="el-realisation" class="el-center-box">
             <div class="el-content-area">
                 <h2 class="el-title">nos réalisations</h2>
@@ -118,9 +109,7 @@
                 </div>
             </div>
         </section>
-        <!-- FIN REALISATIONS -->
 
-        <!-- BANNER CTA -->
         <section class="el-banner-cta" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-grid">
@@ -129,9 +118,7 @@
                 </div>
             </div>
         </section>
-        <!-- FIN BANNER CTA -->
 
-        <!-- FOOTER -->
         <footer id="el-footer-page" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-top">
@@ -172,9 +159,7 @@
                 </p>
             </div>
         </footer>
-        <!-- FIN FOOTER -->
     </div>
-    <!-- FIN PAGE -->
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
