--- a/product.html
+++ b/product.html
@@ -15,10 +15,8 @@
 </head>
 <body>
     
-    <!-- PAGE -->
     <div id="el-page">
 
-        <!-- HEADER PAGE -->
         <header id="el-header-page">
             <a href="" class="el-logo">
                 <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
@@ -36,102 +34,89 @@
                 </li>
             </ul>
         </header>
-        <!-- FIN HEADER PAGE -->
 
-        <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
                     <img src="./assets/images/cmpe-2.jpg" alt="" class="el-img">
-                    <h1>installation mines</h1>
+                    <h1>présentation</h1>
                     <div class="el-content">
                         <h2><i class="fas fa-circle"></i>you are here:</h2>
                         <div>
                             <a href="">home</a>
                             <i class="fas fa-chevron-right"></i>
-                            <span>services</span>
-                            <i class="fas fa-chevron-right"></i>
-                            <span>installation mines</span>
+                            <span>présentation</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- FIN TITLE OVERLAY -->
 
-        <!-- BANNER CTA -->
-        <section class="el-banner-cta" class="el-center-box">
+        <section id="el-presentation" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
+                <div class="el-grid-zone">
+                    <article class="el-zone-left">
+                        <div class="el-block-one">
+                            <h2 class="el-title">société</h2>
+                            <ul class="el-container-nav">
+                                <li>
+                                    <div class="el-active el-link-category">
+                                        <a href="">catégorie 1</a>
+                                        <i class="fas fa-plus-circle"></i>
+                                    </div>
+                                    <ul>
+                                        <li><a href="">sous-catégorie 1</a></li>
+                                        <li><a href="">sous-catégorie 1</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <div class="el-active el-link-category">
+                                        <a href="">catégorie 2</a>
+                                        <i class="fas fa-plus-circle"></i>
+                                    </div>
+                                    <ul>
+                                        <li><a href="">sous-catégorie 2</a></li>
+                                        <li><a href="">sous-catégorie 2</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="el-block-two">
+                            <h2 class="el-title">catalogue alamitec</h2>
+                            <div class="el-container-nav">
+                                <a href="./assets/Catalogue-final-alamitec.pdf"><i class="fas fa-file-pdf"></i>download.pdf</a>
+                            </div>
+                        </div>
+                        <div class="el-block-three">
+                            <h2 class="el-title">contact</h2>
+                            <ul>
+                                <li><a href=""><i class="fas fa-map-marker"></i>Quartier industriel SAPINO Lot n°72- Nouaceur, Casablanca-Maroc</a></li>
+                                <li><a href="tel:+212522537340"><i class="fas fa-phone"></i> +212 522 53 73 40/41</a></li>
+                                <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-paper-plane"></i>contact@alamitec.ma</a></li>
+                                <li><a href=""><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="el-zone-right">
+                        <h2 class="el-title">présentation de l'entreprise</h2>
+                        <p class="el-paragraphe">
+                            <strong>alamitec</strong>
+                            est fondée en 2002 sur la base d’une longue expérience dans le domaine de concassage, avec une vocation d’offrir au marché de nouvelles solutions à travers la production des installations de haute qualité. Chez ALAMITEC, nous possédons une grande expérience, et de solides connaissances de notre métier. Les exigences du marché ont fortement progressé, c’est dans ce sens que nous avons élargi notre savoir-faire à travers notre bureau d’études qualifié d’ingénieurs, et c’est en anticipant les attentes de nos clients grâce à notre équipe de travail impliquée et professionnelle que nous avons construit notre succès.
+                        </p>
+                        <div class="el-container-imgs">
+                            <img src="./assets/images/presentation/1.jpg" alt="">
+                            <img src="./assets/images/presentation/2.jpg" alt="">
+                        </div>
+                        <p class="el-paragraphe">
+                            Aujourd’hui nous sommes l’une des compagnies pionnières dans le secteur industriel, notamment : Mines &, Carrières, Construction métallique, Fabrication mécanique ainsi qu’installation électrique et automatisme. 
+                            Avec <strong>alamitec</strong>  à vos côtés, vous allez mettre en lumière l’accord parfait de vos besoins au cœur de nos préoccupations .Nous vous accompagnons dans l’étude, la fabrication, la réparation, la fourniture de pièces de rechanges, et également dans l’expertise et l’amélioration qualitative et quantitative de vos projets.
+                        </p><br />
+                        <img src="./assets/images/presentation/3.jpg" alt="">
+                    </article>
                 </div>
             </div>
         </section>
-        <!-- FIN BANNER CTA -->
 
-        <!-- INSTALLATION CLE EN MAIN -->
-        <section id="el-installation-cle-en-main" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-container">
-                    <img src="./assets/images/web-con-1-1024x138.jpg" alt="">
-                    <div class="el-grid">
-                        <article class="el-left">
-                            <p class="el-paragraphe">
-                                ALAMITEC compte depuis 20ans sur la compétence, la créativité et le professionnalisme de ses équipes d’ingénieurs et de techniciens pour vous accompagner dans l’étude et la réalisation de tous les projets de développement miniers et industriels. Nous comptons également sur une collaboration étroite avec un large réseau d’experts externes pour certains projets.
-                            </p>
-                        </article>
-                        <article class="el-right">
-                            <p class="el-paragraphe">
-                                <strong>DANS LA POURSUITE D’OR</strong>
-
-                            </p>
-                            <p class="el-paragraphe">
-                                Au-delà du Maroc, <strong>DANS LA POURSUITE D’</strong>
-                                a entamé une expansion sur le continent Africain, en commençant par la Mauritanie Soudan et prochainement en Guinée…. Avec des installations partiels jusqu’à des solutions clé en main.
-                            </p>
-                            <p class="el-paragraphe">
-                                Avec ses partenaires et ses experts les plus expérimentés au Maroc, nous avons commencer une vision d’indépendance pour la fabrication et la conception de nos solutions avec un prix et une qualité très Compétitifs.
-                            </p>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- FIN INSTALLATION CLE EN MAIN -->
-
-        <!-- REALISATIONS -->
-        <section id="el-realisation" class="el-center-box">
-            <div class="el-content-area">
-                <h2 class="el-title">nos réalisations</h2>
-                <div class="owl-carousel">
-                    <img src="./assets/images/realisations/1.jpg" alt="" />
-                    <img src="./assets/images/realisations/2.jpg" alt="" />
-                    <img src="./assets/images/realisations/3.jpg" alt="" />
-                    <img src="./assets/images/realisations/4.jpg" alt="" />
-                    <img src="./assets/images/realisations/5.jpg" alt="" />
-                    <img src="./assets/images/realisations/6.jpg" alt="" />
-                    <img src="./assets/images/realisations/7.jpg" alt="" />
-                    <img src="./assets/images/realisations/8.jpg" alt="" />
-                    <img src="./assets/images/realisations/9.jpg" alt="" />
-                    <img src="./assets/images/realisations/10.jpg" alt="" />
-                </div>
-            </div>
-        </section>
-        <!-- FIN REALISATIONS -->
-
-        <!-- BANNER CTA -->
-        <section class="el-banner-cta" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
-                </div>
-            </div>
-        </section>
-        <!-- FIN BANNER CTA -->
-
-        <!-- FOOTER -->
         <footer id="el-footer-page" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-top">
@@ -172,9 +157,7 @@
                 </p>
             </div>
         </footer>
-        <!-- FIN FOOTER -->
     </div>
-    <!-- FIN PAGE -->
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
