finalisation responsive design nos partenaires

--- a/nos-partenaires.html
+++ b/nos-partenaires.html
@@ -12,6 +12,7 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     
@@ -58,11 +59,17 @@
                     <article class="el-zone-left">
                         <div class="el-block-one">
                             <h2 class="el-title">société</h2>
-                            <div class="el-container-nav">
-                                <a href="">présentation</a>
-                                <a href="" class="el-active">nos partenaires</a>
-                                <a href="">actualités de l'entreprise</a>
-                            </div>
+                            <ul class="el-container-nav">
+                                <li>
+                                    <div class="el-link-category"><a href="">présentation</a></div>
+                                </li>
+                                <li>
+                                    <div class="el-active el-link-category"><a href="">nos partenaires</a></div>
+                                </li>
+                                <li>
+                                    <div class="el-link-category"><a href="">actualités de l'entreprise</a></div>
+                                </li>
+                            </ul>
                         </div>
                         <div class="el-block-two">
                             <h2 class="el-title">catalogue alamitec</h2>
